# crypto_news_ingestion_pipeline

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/config/: settings.py  utils.py
src/kafka_producer/: producer.py
src/monitoring/: health_check.py
src/news_fetcher/: constants.py  news_data_fetcher.py
tests/: test_news_data_fetcher.py
tests/integration/: test_integration_fetch_publish.py
tests/unit/: test_main.py
tests/unit/config/: test_health_check.py  test_settings.py
tests/unit/monitoring/: test_health_check.py
tests/unit/news_fetcher/: test_news_data_fetcher.py
